crates/keron-lang/tests/corpus/errors/check/fn_arg_type_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Int`, found `String`
  --> 2:21
  |
2 | val x: Int = double("hello")
  |                     ^^^^^^^
